---
config:
        layout: elk
---
erDiagram
    direction TB
    classDef default fill:#00808022,stroke:#00ced1,stroke-width:2px
    classDef junction fill:#88888833,stroke:#888888
    tasks {
        INTEGER id PK
        TEXT name
        TEXT description "Nullable"
        TIMESTAMP deadline "Nullable"
        INTEGER parent_id FK "Nullable"
        INTEGER project_id FK "Nullable"
    }
    tags {
        INTEGER id PK
        TEXT name
        TEXT description "Nullable"
    }
    projects {
        INTEGER id PK
        TEXT name
        TEXT description "Nullable"
    }
    sessions {
        INTEGER id PK
        INTEGER task_id FK
        TIMESTAMP start_at
        TIMESTAMP updated_at
        TIMESTAMP end_at "Nullable"
        TEXT pomodoro_state
        BOOL paused
    }
    %% Junction Tables
    task_tags:::junction {
        INTEGER task_id FK
        INTEGER tag_id FK
    }
    project_default_tags:::junction {
        INTEGER project_id FK
        INTEGER tag_id FK
    }

    tasks ||--o{ sessions : "sessions"
    tasks }o--o| projects : "project of"
    tasks }o--o| tasks : "subtask"

    tasks ||--o{ task_tags : "has"
    tags ||--o{ task_tags : "assigned to"

    projects ||--o{ project_default_tags : "has"
    tags ||--o{ project_default_tags : "default for"
